# rectpack2D

./: CMakeLists.txt  README.md
include/: finders_interface.h  insert_and_split.h
include/rectpack2D/: best_bin_finder.h  empty_space_allocators.h  empty_spaces.h  rect_structs.h
src/: empty_spaces.h
